corrected info column spacing and made it sticky.

--- a/artStyle.css
+++ b/artStyle.css
@@ -30,24 +30,43 @@ header img {
 /* info (left side) */
 
 .info {
+  padding-top: 15vh;
   color: white;
+  text-align: center;
+  max-width: 30vw;
+  height: 100vh;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  margin: 0rem 3rem;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: space-between; */
 }
 
 .info h1 {
   font-family: "Antic Didone", serif;
+  font-size: 5rem;
+  font-weight: lighter;
+  margin: 0rem 1rem;
 }
 
 .info h3 {
   font-family: "Antic", sans-serif;
+  margin: 1rem 3rem;
+  color: #dadada;
 }
 
 .info hr {
-  margin-right: 3rem;
+  margin: 3rem 0.1rem;
+  border-color: #838383;
 }
 
 .info p {
   font-family: "Antic", sans-serif;
-  line-height: 1.6rem;
+  line-height: 2rem;
+  color: #dadada;
+  margin: 0rem 1rem;
 }
 
 /* gallery grid (right side) */
